--- a/Lab1-UI/src/main/res/values-en/strings.xml
+++ b/Lab1-UI/src/main/res/values-en/strings.xml
@@ -38,6 +38,25 @@
 
     <!-- Countries -->
     <string name="country_colombia">Colombia</string>
+    <string name="country_argentina">Argentina</string>
+    <string name="country_bolivia">Bolivia</string>
+    <string name="country_brasil">Brazil</string>
+    <string name="country_chile">Chile</string>
+    <string name="country_costa_rica">Costa Rica</string>
+    <string name="country_cuba">Cuba</string>
+    <string name="country_ecuador">Ecuador</string>
+    <string name="country_el_salvador">El Salvador</string>
+    <string name="country_guatemala">Guatemala</string>
+    <string name="country_honduras">Honduras</string>
+    <string name="country_mexico">Mexico</string>
+    <string name="country_nicaragua">Nicaragua</string>
+    <string name="country_panama">Panama</string>
+    <string name="country_paraguay">Paraguay</string>
+    <string name="country_peru">Peru</string>
+    <string name="country_dominican_republic">Dominican Republic</string>
+    <string name="country_uruguay">Uruguay</string>
+    <string name="country_venezuela">Venezuela</string>
+
 
 
     <!-- Common -->
