--- a/Lab1-UI/src/main/res/values-en/strings.xml
+++ b/Lab1-UI/src/main/res/values-en/strings.xml
@@ -37,25 +37,9 @@
     <string name="select_city">Select city</string>
 
     <!-- Countries -->
-    <string name="country_colombia">Colombia</string>
-    <string name="country_argentina">Argentina</string>
-    <string name="country_bolivia">Bolivia</string>
-    <string name="country_brasil">Brazil</string>
-    <string name="country_chile">Chile</string>
-    <string name="country_costa_rica">Costa Rica</string>
-    <string name="country_cuba">Cuba</string>
-    <string name="country_ecuador">Ecuador</string>
-    <string name="country_el_salvador">El Salvador</string>
-    <string name="country_guatemala">Guatemala</string>
-    <string name="country_honduras">Honduras</string>
-    <string name="country_mexico">Mexico</string>
-    <string name="country_nicaragua">Nicaragua</string>
-    <string name="country_panama">Panama</string>
-    <string name="country_paraguay">Paraguay</string>
-    <string name="country_peru">Peru</string>
-    <string name="country_dominican_republic">Dominican Republic</string>
-    <string name="country_uruguay">Uruguay</string>
-    <string name="country_venezuela">Venezuela</string>
+    <string name="country_not_selected">Country not selected</string>
+    <string name="cities_empty">No cities available for this country</string>">
+
 
 
 
@@ -67,4 +51,5 @@
     <string name="required_field_error">This field is required</string>
     <string name="missing_fields_error">Please complete the following fields:</string>">
     <string name="validation_error">Please complete all required fields</string>
+    <string name="validation_email_error">Enter a valid email</string>">
 </resources>
