a few changes in landscape mode personal data screen

--- a/Lab1-UI/src/main/res/values-fr/strings.xml
+++ b/Lab1-UI/src/main/res/values-fr/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Données personnelles</string>
+    <string name="app_name">UI App</string>
 
     <!-- PersonalDataActivity -->
     <string name="personal_data_title">Données personnelles</string>
